# SimpleDb

docs/: specification.md
docs/dev/: class_diagram.plantuml  developer_documentation.md
docs/user/: select_syntax.md  user_documentation.md
src/: .clang-tidy  .gitignore  CMakeLists.txt  build.sh
src/include/csv/: csv.h
src/include/db/: cell.h  condition_evaluation.h  database.h  database_manager.h  exceptions.h  expression.h  expression_evaluation.h  table.h  table_serialization.h  variable_list.h
src/include/helper/: like.h  logger.h  overload.h  query_response.h  read_array.h  row_container.h  sigint.h  string.h
src/include/io/: asio_uds_socket.h  ipc_socket.h  windows_named_pipe.h
src/include/jobs/: job_queue.h
src/include/parse/: keywords.h  token_stream.h  token_to_cell.h  type.h
src/src/: main.cpp  socket_test.cpp
src/src/csv/: csv.cpp
src/src/db/: cell.cpp  condition_evaluation.cpp  database.cpp  database_manager.cpp  expression.cpp  expression_evaluation.cpp  table.cpp  table_serialization.cpp  variable_list.cpp
src/src/helper/: like.cpp  read_array.cpp  sigint.cpp  string.cpp
src/src/io/: asio_uds_socket.cpp  windows_named_pipe.cpp
src/src/jobs/: job_queue.cpp
src/src/parse/: keyword.cpp  token_stream.cpp  token_to_cell.cpp
src/tests/db/: cell.cpp  condition.cpp  database.cpp  edgecases.cpp  select.cpp  table.cpp
src/tests/include/: doctest.h
src/tests/parse/: token_stream.cpp
src/tools/: build.sh  run.sh  run_tests.sh  win_connect.py
src/tools/connect/: unix_connect.sh  win_connect.py
